--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@dashup/eslint-config-dashup": "0.0.1",
-    "@dashup/module": "file:../../modules/dashup_module",
+    "@dashup/module": "0.0.5",
+    "axios": "^0.20.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "node-fetch": "^2.6.1"
   }
