--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@dashup/module": "^1.0.2",
     "axios": "^0.20.0",
     "babel-plugin-add-module-exports": "^1.0.4",
+    "country-list": "^2.2.0",
     "handlebars": "^4.7.6",
-    "node-fetch": "^2.6.1"
+    "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
+    "perfect-scrollbar": "^1.5.0",
+    "twilio": "^3.51.0",
+    "twilio-client": "^1.12.5",
+    "twilio-js": "^0.1.1"
   }
 }
