--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "perfect-scrollbar": "^1.5.0",
     "twilio": "^3.51.0",
     "twilio-client": "^1.12.5",
-    "twilio-js": "^0.1.1"
+    "twilio-js": "^0.1.1",
+    "wavesurfer.js": "^4.2.0"
   }
 }
