--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "handlebars": "^4.7.6",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
+    "peerjs": "^1.3.1",
     "perfect-scrollbar": "^1.5.0",
     "twilio": "^3.51.0",
     "twilio-client": "^1.12.5",
