--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.14.5",
     "@dashup/eslint-config-dashup": "0.0.1",
-    "@dashup/module": "^1.0.8",
+    "@dashup/module": "^2.0.2",
+    "@dashup/ui": "file:../../../modules/dashup_ui",
     "axios": "^0.21.1",
     "babel-plugin-add-module-exports": "^1.0.4",
     "country-list": "^2.2.0",
@@ -24,6 +26,8 @@
     "node-fetch": "^2.6.1",
     "peerjs": "^1.3.1",
     "perfect-scrollbar": "^1.5.0",
+    "react-grid-layout": "^1.2.5",
+    "react-measure": "^2.5.2",
     "twilio": "^3.57.0",
     "twilio-client": "^1.14.0",
     "twilio-js": "^0.1.1",
