--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "perfect-scrollbar": "^1.5.0",
     "react-grid-layout": "^1.2.5",
     "react-measure": "^2.5.2",
+    "react-wavesurfer": "^0.8.6",
     "twilio": "^3.57.0",
     "twilio-client": "^1.14.0",
     "twilio-js": "^0.1.1",
-    "wavesurfer.js": "^4.5.0"
+    "wavesurfer.js": "^5.1.0"
   }
 }
