--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.14.5",
+    "@dashup/core": "^1.2.1",
     "@dashup/eslint-config-dashup": "0.0.1",
     "@dashup/module": "^2.0.3",
     "@dashup/ui": "file:../../../modules/dashup_ui",
@@ -22,13 +23,16 @@
     "babel-plugin-add-module-exports": "^1.0.4",
     "country-list": "^2.2.0",
     "handlebars": "^4.7.7",
+    "i": "^0.3.6",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
+    "npm": "^7.19.0",
     "peerjs": "^1.3.1",
     "perfect-scrollbar": "^1.5.0",
     "react-grid-layout": "^1.2.5",
     "react-measure": "^2.5.2",
     "react-wavesurfer": "^0.8.6",
+    "socket.io-client": "^4.1.2",
     "twilio": "^3.57.0",
     "twilio-client": "^1.14.0",
     "twilio-js": "^0.1.1",
